force-app/main/default/objects/ProductStockInfo__c/ProductStockInfo__c.object-meta.xml
<CustomObject>
    <label>在庫情報</label>
    <nameField>
        <displayFormat>PSI-{00000000}</displayFormat>
        <label>在庫情報#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>