force-app/main/default/objects/ProductStockInfo__c/fields/AccountName_F__c.field-meta.xml
<CustomField>
    <fullName>AccountName_F__c</fullName>
    <formula>Account__r.Name</formula>
    <label>荷主名</label>
    <type>Text</type>
</CustomField>