force-app/main/default/objects/ProductStockInfo__c/fields/AllocableQuantity_F__c.field-meta.xml
<CustomField>
    <fullName>AllocableQuantity_F__c</fullName>
    <formula>ArrivalQuantity__c - AllocatedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引き当て可能数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>