force-app/main/default/objects/ProductStockInfo__c/fields/AllocatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>AllocatedQuantity__c</fullName>
    <label>引き当て済み数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>