force-app/main/default/objects/ProductStockInfo__c/fields/AllocationPriority_F__c.field-meta.xml
<CustomField>
    <fullName>AllocationPriority_F__c</fullName>
    <formula>TEXT( Account__r.AllocationPriority__c )</formula>
    <label>引き当て順位</label>
    <type>Text</type>
</CustomField>