force-app/main/default/objects/ProductStockInfo__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <defaultValue>TODAY() -1</defaultValue>
    <inlineHelpText>入庫日のデフォルトが昨日になる</inlineHelpText>
    <label>入庫日</label>
    <type>Date</type>
</CustomField>