force-app/main/default/objects/ProductStockInfo__c/fields/ArrivalInfo__c.field-meta.xml
<CustomField>
    <fullName>ArrivalInfo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>入庫</label>
    <referenceTo>ArrivalInfo__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>