force-app/main/default/objects/ProductStockInfo__c/fields/ArrivalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ArrivalQuantity__c</fullName>
    <label>数量（入庫）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>