force-app/main/default/objects/ProductStockInfo__c/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <label>連絡日</label>
    <type>Date</type>
</CustomField>