force-app/main/default/objects/ProductStockInfo__c/fields/DetectionDate__c.field-meta.xml
<CustomField>
    <fullName>DetectionDate__c</fullName>
    <label>発見日</label>
    <type>Date</type>
</CustomField>