force-app/main/default/objects/ProductStockInfo__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>「名義変更」フローに利用項目</description>
    <label>エラー</label>
    <length>256</length>
    <type>Html</type>
</CustomField>