force-app/main/default/objects/ProductStockInfo__c/fields/ManufactureDate__c.field-meta.xml
<CustomField>
    <fullName>ManufactureDate__c</fullName>
    <label>製造日</label>
    <type>Date</type>
</CustomField>