force-app/main/default/objects/ProductStockInfo__c/fields/PayQuantity__c.field-meta.xml
<CustomField>
    <fullName>PayQuantity__c</fullName>
    <label>弁償・立替有償個数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>