force-app/main/default/objects/ProductStockInfo__c/fields/ProductCode_F__c.field-meta.xml
<CustomField>
    <fullName>ProductCode_F__c</fullName>
    <formula>ProductMaster__r.ProductCode__c</formula>
    <label>商品コード</label>
    <type>Text</type>
</CustomField>