force-app/main/default/objects/ProductStockInfo__c/fields/ProductionLotNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductionLotNumber__c</fullName>
    <label>生産ロット番号</label>
    <length>59</length>
    <type>Text</type>
</CustomField>