force-app/main/default/objects/ProductStockInfo__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>