force-app/main/default/objects/ProductStockInfo__c/fields/ProductName_F__c.field-meta.xml
<CustomField>
    <fullName>ProductName_F__c</fullName>
    <formula>ProductMaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商品名</label>
    <type>Text</type>
</CustomField>