force-app/main/default/objects/ProductStockInfo__c/fields/ProductReference__c.field-meta.xml
<CustomField>
    <fullName>ProductReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品マスタ（参照）</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>在庫情報 (商品マスタ（参照）)</relationshipLabel>
    <relationshipName>ProductStockInfoReferenceList</relationshipName>
    <type>Lookup</type>
</CustomField>