force-app/main/default/objects/ProductStockInfo__c/fields/ProductStockAdjustQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductStockAdjustQuantity__c</fullName>
    <description>在庫調情報数量調整フローにて設定：自分が調整元になっている在庫情報の数量の集計</description>
    <label>在庫調整数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>