force-app/main/default/objects/ProductStockInfo__c/fields/Receptionist__c.field-meta.xml
<CustomField>
    <fullName>Receptionist__c</fullName>
    <label>受付者</label>
    <length>80</length>
    <type>Text</type>
</CustomField>