force-app/main/default/objects/ProductStockInfo__c/fields/ReimbursementDetail__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementDetail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>弁償・立替</label>
    <referenceTo>ReimbursementDetail__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>