force-app/main/default/objects/ProductStockInfo__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>