force-app/main/default/objects/ProductStockInfo__c/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <label>出庫済み数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>