force-app/main/default/objects/ProductStockInfo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>在庫状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreRegistration</fullName>
                <label>仮登録</label>
            </value>
            <value>
                <fullName>Arrived</fullName>
                <label>入庫済み</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>