force-app/main/default/objects/ProductStockInfo__c/fields/StockQuantity_F__c.field-meta.xml
<CustomField>
    <fullName>StockQuantity_F__c</fullName>
    <formula>ArrivalQuantity__c - BLANKVALUE(ShippedQuantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>在庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>