force-app/main/default/objects/ProductStockInfo__c/fields/TargetProductStockInfo__c.field-meta.xml
<CustomField>
    <fullName>TargetProductStockInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>調整元在庫情報</label>
    <referenceTo>ProductStockInfo__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>