force-app/main/default/objects/ProductStockInfo__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <label>ケース</label>
            </value>
            <value>
                <fullName>Pallet</fullName>
                <label>パレット</label>
            </value>
            <value>
                <fullName>Piece</fullName>
                <label>本（個）</label>
            </value>
            <value>
                <fullName>kg</fullName>
                <label>キロ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>