force-app/main/default/objects/ProductStockInfo__c/fields/WarehouseMaster__c.field-meta.xml
<CustomField>
    <fullName>WarehouseMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>倉庫</label>
    <referenceTo>WarehouseMaster__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>