force-app/main/default/objects/ProductStockInfo__c/fields/WarehouseTransferRequest__c.field-meta.xml
<CustomField>
    <fullName>WarehouseTransferRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>倉庫間移動</label>
    <referenceTo>WarehouseTransferRequest__c</referenceTo>
    <relationshipLabel>在庫情報</relationshipLabel>
    <relationshipName>ProductStockInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>