force-app/main/default/objects/ProductStockInfo__c/validationRules/NoArrivalForTerminatedContract.validationRule-meta.xml
<ValidationRule>
    <fullName>NoArrivalForTerminatedContract</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.WarehouseContractTermination__c</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>荷主の「契約解約（倉庫）」がチェックされているため、入庫処理を実行できません。</errorMessage>
</ValidationRule>