force-app/main/default/objects/ProductStockInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LotNumber__c</columns>
    <columns>Account__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>ArrivalInfo__c</columns>
    <columns>WarehouseMaster__c</columns>
    <columns>ArrivalQuantity__c</columns>
    <columns>AllocableQuantity_F__c</columns>
    <columns>AllocatedQuantity__c</columns>
    <columns>ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>